heroku database configured

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=clwxydcjair55xn0.chr7pe7iynqr.eu-west-1.rds.amazonaws.com;user id=z007vq6cot5actir;password=wbt9944lh3swfll7;port=3306;database=tcdapsu93po1oe95;"
+},
   "AllowedHosts": "*"
 }
