--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "HEROKU_POSTGRESQL_IVORY_URL":""
+    "DefaultConnection": "server=127.0.0.1;user id=netuser;password=netpass;port=3306;database=university;"
 },
   "AllowedHosts": "*"
 }
